<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.havh.newyorkapi.activities.AdvSearch">


    <LinearLayout
        android:id="@+id/ll_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="67dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="150dp"
        android:paddingRight="@dimen/spacing_normal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginDate"
            android:paddingTop="@dimen/spacing_large"
            android:textSize="@dimen/font_normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sortOrder"
            android:textSize="@dimen/font_normal"
            android:paddingTop="@dimen/spacing_large"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewsDesk"
            android:textSize="@dimen/font_normal"
            android:paddingTop="@dimen/spacing_huge"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/ll_text"
        android:layout_toEndOf="@+id/ll_text">

        <EditText
            android:id="@+id/edit_dialog"
            android:layout_width="208dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spinner_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/sorter"
            >
        </Spinner>

        <CheckBox
            android:id="@+id/cb_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Arts"
            />
        <CheckBox
            android:id="@+id/cb_fashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fashion"
            />

        <CheckBox
            android:id="@+id/cb_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sport"
            />


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaveBtn"
        android:id="@+id/btn_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp" />

</RelativeLayout>
